# mdnsniff

./: CMakeLists.txt  README.md  main.c  maketest  mdns_win.c  udp_sniffer_vita.c  udp_sniffer_vita.h  udp_sniffer_win.c  udp_sniffer_win.h
